--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,8 +6,13 @@ Date: 2025-10-21
 Author: Who wrote it
 Maintainer: Who to complain to <yourfault@somewhere.net>
 Description: More about what it does (maybe more than one line).
-License: What license is it under?
 RoxygenNote: 7.3.3
+Depends:
+    R (>= 3.4.0)
+Imports:
+    instantiate
 Suggests: 
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
+SystemRequirements: GNU make
+Encoding: UTF-8
