--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,9 +10,9 @@ RoxygenNote: 7.3.3
 Depends:
     R (>= 3.4.0)
 Imports:
-    cmdstanr,
     instantiate
 Suggests: 
+    cmdstanr (>= 0.5.0),
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
 SystemRequirements: GNU make
