--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,12 +10,12 @@ RoxygenNote: 7.3.3
 Depends:
     R (>= 3.4.0)
 Imports:
+    cmdstanr,
     instantiate
 Suggests: 
-    cmdstanr (>= 0.5.0),
     testthat (>= 3.0.0)
+Remotes:
+    cmdstanr=url::https://stan-dev.r-universe.dev/src/contrib/cmdstanr_0.9.0.tar.gz
 Config/testthat/edition: 3
 SystemRequirements: GNU make
 Encoding: UTF-8
-Additional_repositories:
-    https://mc-stan.org/r-packages/
